added the testing
